# world-3d

./: .gitignore  CMakeLists.txt  FlyingCameraTestGL.sln  FlyingCameraTestGL.vcxproj  FlyingCameraTestGL.vcxproj.filters  Makefile  README.md
res/shaders/: main.frag  main.vert
src/: camera.cxx  camera.hxx  debug.hxx  game.cxx  game.hxx  graphics-engine.cxx  graphics-engine.hxx  graphics-gl.cxx  graphics-types.cxx  graphics-types.hxx  graphics.cxx  graphics.hxx  icon.hxx  io.cxx  io.hxx  main.cxx  main.frag  main.vert  models.cxx  models.hxx  window-glfw.cxx  window.cxx  window.hxx
